# ledboard-translator-emulator

./: Ledboard translator emulator.spec  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: pyinstaller-windows.yml  pyinstaller.yml
ledboardtranslatoremulator/: __main__.py  central_widget.py
ledboardtranslatoremulator/artnet/: artnet.py
ledboardtranslatoremulator/dmx/: dmx.py
ledboardtranslatoremulator/emulator/: fixed_point_3d_noise.py  renderer.py  renderer_state.py  renderer_widget.py  sampling_point_bounds.py
ledboardtranslatoremulator/io/: io.py
ledboardtranslatoremulator/midi/: input_process.py  io_loop.py  midi.py  process.py
ledboardtranslatoremulator/resources/: interop-data-elephanz.json  interop-data-melinerion.json
ledboardtranslatoremulator/settings/: settings.py  store.py  widget.py
ledboardtranslatoremulator/translator/: translator.py
ledboardtranslatoremulator/translators/: artnet.py  midi.py
ledboardtranslatoremulator/updater/: updater.py  widget.py
