[build-system]
requires = [
    "PySide6",
    "dataclasses_json",
    "ledboardlib@git+https://github.com/Frangitron/ledboard-lib@main",
    "pyside6-helpers@git+https://github.com/MrFrangipane/pyside6-helpers@main",
    "setuptools>=46.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "ledboardtranslatoremulator"
description = "Ledboard translator emulator"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    { name = "Frangitron", email = "contact@frangitron.com" }
]
maintainers = [
    { name = "Frangitron", email = "contact@frangitron.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python", "frangitron"]
dynamic = ["version"]
