[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledboardtranslatoremulator"
description = "Ledboard translator emulator"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    { name = "Frangitron", email = "contact@frangitron.com" }
]
maintainers = [
    { name = "Frangitron", email = "contact@frangitron.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python", "frangitron"]
dynamic = [
    "version",
    "dependencies"
]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
