[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledboardtranslatoremulator"
version = "0.2.2"  # Elephanz
description = "Ledboard translator emulator"
readme = "README.md"
requires-python = ">=3.11,<=3.12"
license = {file = "LICENSE"}
authors = [
    { name = "Frangitron", email = "contact@frangitron.com" }
]
maintainers = [
    { name = "Frangitron", email = "contact@frangitron.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python", "frangitron"]
dynamic = [
    "dependencies"
]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
